# PyTradingBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  healthcheck.sh  pyproject.toml  release_notes.rst  requirements.txt
.github/workflows/: docker.yml  python-publish.yml  release.yml
pytradingbot/: __init__.py  api.py  backtest.py  backtest_routes.py  constants.py  main.py  paper_routes.py  paper_storage.py  paper_trading.py  routes.py  scheduler.py  server.py  storage.py  telegram.py  tickers.py
pytradingbot/templates/: dashboard.html  filters.json
trading_bot/: api.py  constants.py  main.py  routes.py  server.py  storage.py
trading_bot/templates/: dashboard.html
